--- a/PaintApp.kv
+++ b/PaintApp.kv
@@ -1,21 +1,20 @@
+#:include Popups.kv
+
 <RootScreen>:
     name: 'rootscreen'
-    #canvas:
-    #    Rectangle:
-    #        Color:
-    #            rgba: 0,1,0,0.5
     BoxLayout:
-        id: myLayout
+        id: rootLayout
         orientation: 'vertical'
         size_hint: (None, None)
         size: root.width * 0.9, root.height * 0.9
         pos: root.width * 0.05, root.height * 0.05
-        canvas:
-            Color:
-                rgba: (1,0,0,0.5)
-            Rectangle:
-                pos: self.pos
-                size: self.size
+        #canvas:
+        #    Color:
+        #        rgba: (1,0,0,0.5) #red
+        #    Rectangle:
+        #        pos: self.pos
+        #        size: self.size
+        # add canvas and toolbar widgets
         RootCanvas:
         Toolbar:
             size_hint: (1, 0.1)
@@ -25,14 +24,15 @@
         size_hint: (None, None)
         size: root.width, root.height
         pos: self.parent.pos
-        canvas:
-            Color:
-                rgba: 0,0,1,1
-            Rectangle:
-                pos: self.pos
-                size: self.size
-        Label:
-            text: "This is the Canvas"
+        #canvas:
+        #    Color:
+        #        rgba: 0,0,1,1
+        #    Rectangle:
+        #        pos: self.pos
+        #        size: self.size
+        #Label:
+        #    text: "This is the Canvas"
+        CircleDraw:
 <Toolbar>:
     canvas:
         Color:
@@ -46,15 +46,15 @@
         spacing: self.width * .02
         pos: self.parent.pos
         orientation: 'horizontal'
-        Button:
+        ToolbarButton:
             text: 'Color Selection'
-            on_release: print('Color Selection Pressed!')
-        Button:
+            on_release: self.colorSelectCallback()
+        ToolbarButton:
             text: 'Shape Selection'
-            on_release: print('Shape Selection Pressed!')
-        Button:
+            on_release: self.shapeSelectCallback()
+        ToolbarButton:
             text: 'Bucket Tool'
-            on_release: print('Bucket Tool Pressed!')
-        Button:
+            on_release: self.bucketToolCallback()
+        ToolbarButton:
             text: 'Undo Button'
-            on_release: print('Undo Button Pressed!')
+            on_release: self.undoToolCallback()
