ClearScreen works. Working on other tools.

--- a/PaintApp.kv
+++ b/PaintApp.kv
@@ -34,9 +34,9 @@
             text: 'Shape Selection'
             #on_release: self.shapeSelectCallback()
         ToolbarButton:
-            id: bucketBtn
-            text: 'Bucket Tool'
-            #on_release: self.bucketToolCallback()
+            id: clearBtn
+            text: 'Clear Screen Tool'
+            #on_release: self.clearScreenCallback()
         ToolbarButton:
             id: undoBtn
             text: 'Undo Button'
