--- a/PaintApp.kv
+++ b/PaintApp.kv
@@ -34,6 +34,9 @@
             text: 'Shape Selection'
             #on_release: self.shapeSelectCallback()
         ToolbarButton:
+            id: sizeBtn
+            text: 'Size Selection'
+        ToolbarButton:
             id: clearBtn
             text: 'Clear Screen Tool'
             #on_release: self.clearScreenCallback()
