--- a/Popups.kv
+++ b/Popups.kv
@@ -16,3 +16,11 @@
         #size: root.width * 0.75, root.height * 0.75
         orientation: 'vertical'
         spacing: self.height * 0.05
+
+<SizeSelectPopup>
+    size_hint: (0.5,0.5)
+    title: 'Size Selector'
+    BoxLayout:
+        id: sizeLayout
+        orientation: 'vertical'
+        spacing: self.height * 0.05
